//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  user_id String [not null]
  type String [not null]
  provider String [not null]
  provider_account_id String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, provider_account_id) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  user_id String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  phone String [unique]
  name String
  username String [unique, not null]
  password String [not null]
  email String [unique, not null]
  email_verified DateTime
  image String
  linkedin String
  address String
  accounts Account [not null]
  sessions Session [not null]
  roles RolesOnUsers [not null]
  status UserState [not null, default: 'Active']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  resumes Resumes [not null]
  applications Applications [not null]
  online_resumes OnlineResumes [not null]
  analysis JobDescriptionAnalysis [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Role {
  id String [pk]
  name String [unique, not null]
  description String
  created_by String [not null]
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]
  users RolesOnUsers [not null]
}

Table RolesOnUsers {
  user User [not null]
  user_id String [not null]
  role Role [not null]
  role_id String [not null]
  assigned_at DateTime [default: `now()`, not null]
  assigned_by String [not null]

  indexes {
    (user_id, role_id) [pk]
  }
}

Table JobDescriptions {
  id String [pk]
  position String
  skills String [not null]
  work_scope String
  description String [not null]
  status JobStatus [not null, default: 'Draft']
  contact String
  created_by String [not null]
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]
  questionaires QuestionairesOnJobDescriptions [not null]
  applications Applications [not null]
  tags TagsOnJobDescriptions [not null]
  analysis JobDescriptionAnalysis [not null]
  title String [not null]
  company Json [not null]
  department String
  location String
  job_type String
  experience_level String
  salary_range Json
  required_skills Json [not null]
  preferred_skills Json
  technical_requirements String
  responsibilities String [not null]
  qualifications String [not null]
  benefits String
  keywords Json
  skill_weights Json
  seniority_level String
  job_matches JobMatch [not null]
  remote_policy String
  visa_sponsorship Boolean [default: false]
  industry_sector String
  company_size String
  role_level String
  cultural_keywords Json
}

Table Tags {
  id String [pk]
  name String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  jobs TagsOnJobDescriptions [not null]
}

Table TagsOnJobDescriptions {
  job_id String [not null]
  job JobDescriptions [not null]
  tag_id String [not null]
  tag Tags [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]

  indexes {
    (job_id, tag_id) [unique]
  }
}

Table Questionaires {
  id String [pk]
  title String [not null]
  description String [not null]
  created_by String [not null]
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]
  jds QuestionairesOnJobDescriptions [not null]
  standard_scores Int
  applications Applications [not null]
  questionaire_items QuestionaireItemOnQuestionaires [not null]
}

Table QuestionaireItems {
  id String [pk]
  description String [not null]
  type QuestionaireItemType [not null, default: 'radio']
  answer String
  created_by String [not null]
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]
  questionaires QuestionaireItemOnQuestionaires [not null]
  options QuestionaireItemOptionsOnQuestionaireItems [not null]
}

Table QuestionaireItemOptions {
  id String [pk]
  name String [not null]
  value String [not null]
  created_by String [not null]
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]
  questionaire_items QuestionaireItemOptionsOnQuestionaireItems [not null]
}

Table QuestionaireItemOptionsOnQuestionaireItems {
  option QuestionaireItemOptions [not null]
  option_id String [not null]
  item QuestionaireItems [not null]
  item_id String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  operator String [not null]

  indexes {
    (option_id, item_id) [unique]
  }
}

Table QuestionaireItemOnQuestionaires {
  questionaire Questionaires [not null]
  questionaire_id String [not null]
  questionaire_item QuestionaireItems [not null]
  questionaire_item_id String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  operator String [not null]

  indexes {
    (questionaire_id, questionaire_item_id) [unique]
  }
}

Table QuestionairesOnJobDescriptions {
  job_description JobDescriptions [not null]
  job_description_id String [not null]
  questionaire Questionaires [not null]
  questionaire_id String [not null]
  created_by String [not null]
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]

  indexes {
    (job_description_id, questionaire_id) [pk]
  }
}

Table Resumes {
  id String [pk]
  user_id String [not null]
  user User [not null]
  url String [not null]
  type String [not null]
  size Int [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  applications Applications [not null]
}

Table OnlineResumes {
  id String [pk]
  user_id String [not null]
  user User [not null]
  title String [not null]
  summary String [not null]
  headline String
  current_status String
  location String
  relocation Boolean [not null, default: false]
  remote_preference String
  experiences Json [not null]
  technical_skills Json [not null]
  soft_skills Json [not null]
  education Json [not null]
  certifications Json
  job_preferences Json [not null]
  projects Json
  languages Json
  ai_analysis Json
  visibility String [not null, default: 'public']
  completeness Int [not null, default: 0]
  last_updated DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  applications Applications [not null]
  job_matches JobMatch [not null]
  skills_searchable String
}

Table Applications {
  id String [pk]
  user User [not null]
  user_id String [not null]
  online_resume OnlineResumes [not null]
  online_resume_id String [not null]
  job_description JobDescriptions [not null]
  job_description_id String [not null]
  questionaire Questionaires
  questionaire_id String
  questionare_answers Json
  resume_id String
  resume Resumes
  scores Int [not null, default: 0]
  status ApplicationStatus [not null, default: 'pending']
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]
  job_match JobMatch
  job_match_id String [unique]
}

Table JobDescriptionAnalysis {
  id String [pk]
  job_description JobDescriptions [not null]
  job_description_id String [not null]
  user User [not null]
  user_id String [not null]
  score Decimal
  analysis Json
  created_at DateTime [default: `now()`, not null]
  last_modifier String
  updated_at DateTime [not null]
}

Table JobMatch {
  id String [pk]
  job_description_id String [not null]
  job_description JobDescriptions [not null]
  online_resume_id String [not null]
  online_resume OnlineResumes [not null]
  overall_match_score Float [not null]
  skill_match_score Float [not null]
  experience_match_score Float [not null]
  education_match_score Float [not null]
  matching_skills Json [not null]
  missing_skills Json [not null]
  recommendations String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  application Applications
}

Enum UserState {
  Active
  Inactive
  Deleted
}

Enum JobStatus {
  Draft
  Open
  Closed
}

Enum QuestionaireItemType {
  text
  boolean
  radio
  checkbox
}

Enum ApplicationStatus {
  pending
  approved
  rejected
}

Ref: Account.user_id > User.id [delete: Cascade]

Ref: Session.user_id > User.id [delete: Cascade]

Ref: RolesOnUsers.user_id > User.id

Ref: RolesOnUsers.role_id > Role.id

Ref: TagsOnJobDescriptions.job_id > JobDescriptions.id

Ref: TagsOnJobDescriptions.tag_id > Tags.id

Ref: QuestionaireItemOptionsOnQuestionaireItems.option_id > QuestionaireItemOptions.id

Ref: QuestionaireItemOptionsOnQuestionaireItems.item_id > QuestionaireItems.id

Ref: QuestionaireItemOnQuestionaires.questionaire_id > Questionaires.id

Ref: QuestionaireItemOnQuestionaires.questionaire_item_id > QuestionaireItems.id

Ref: QuestionairesOnJobDescriptions.job_description_id > JobDescriptions.id

Ref: QuestionairesOnJobDescriptions.questionaire_id > Questionaires.id

Ref: Resumes.user_id > User.id

Ref: OnlineResumes.user_id > User.id

Ref: Applications.user_id > User.id

Ref: Applications.online_resume_id > OnlineResumes.id

Ref: Applications.job_description_id > JobDescriptions.id

Ref: Applications.questionaire_id > Questionaires.id

Ref: Applications.resume_id > Resumes.id

Ref: Applications.job_match_id - JobMatch.id

Ref: JobDescriptionAnalysis.job_description_id > JobDescriptions.id

Ref: JobDescriptionAnalysis.user_id > User.id

Ref: JobMatch.job_description_id > JobDescriptions.id

Ref: JobMatch.online_resume_id > OnlineResumes.id